fix content jumping when vertical scrollbar appears/disappears

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -1,3 +1,8 @@
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 #modal-snap-background {
     position: fixed;
     top: 0;
